# ai-engineer

./: .gitignore  pyproject.toml
ai_engineer/: generate_ideas.py  llm.py  prompt_templates.py
examples/hackathon01/: ideas_generation.py  nb.ipynb
examples/hackathon01/resource/document/: 01_overview.md  02_problem.md  03_alternative.md  04_solution.md  05_importance.md  06_opportunity.md  07_ena.md  08_tokenomic.md  agg.py  aggregated.md
scripts/: gen1.py
