[tool.poetry]
name = "ai-engineer"
version = "0.1.0"
description = ""
authors = ["gnart <nvtrang91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.39.0"
backoff = "^2.2.1"
openai = "^1.54.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
